--- a/Notes.APP/Notes.APP/App.xaml
+++ b/Notes.APP/Notes.APP/App.xaml
@@ -3,8 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:local="clr-namespace:Notes.APP"
-    StartupUri="ListWindow.xaml">
+    xmlns:local="clr-namespace:Notes.APP">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
