--- a/Notes.APP/Notes.APP/TimePickerWindow.xaml
+++ b/Notes.APP/Notes.APP/TimePickerWindow.xaml
@@ -2,20 +2,17 @@
     x:Class="Notes.APP.TimePickerWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:custom="clr-namespace:Notes.APP.CustomCtrls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:local="clr-namespace:Notes.APP.CustomCtrls"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:tb="http://www.hardcodet.net/taskbar"
-    xmlns:xc="http://schemas.xceed.com/wpf/xaml/toolkit"
+    xmlns:local="clr-namespace:Notes.APP"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="设置提醒时间"
     Width="300"
     Height="150"
     AllowsTransparency="True"
     Background="Transparent"
     Loaded="Window_Loaded"
-    ShowInTaskbar="False"
+    ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     WindowStyle="None">
     <Grid>
@@ -126,18 +123,26 @@
                                     Orientation="Horizontal">
                                     <!--  年月日  -->
                                     <DatePicker
-                                        x:Name="TimePicker"
-                                        Width="100"
+                                        x:Name="datePicker"
+                                        Width="120"
                                         Margin="0,0,10,0"
                                         Background="Transparent"
                                         Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-                                    <local:TimePickerUserControl
-                                        ControlHeight="180"
-                                        ControlWidth="250"
+
+                                    <!--<local:TimePickerUserControl
+                                        ControlHeight="50"
+                                        ControlWidth="180"
                                         ItemBackground="Beige"
                                         ItemForeground="DarkGreen"
-                                        SelectedTime="10:45" />
+                                        SelectedTime="10:45" />-->
+                                    <hc:TimePicker
+                                        x:Name="timePicker"
+                                        Width="100"
+                                        Background="Transparent"
+                                        Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        TimeFormat="HH:mm" />
+
                                 </StackPanel>
 
                                 <Button
