--- a/BookApp/BookPro/MainWindow.xaml
+++ b/BookApp/BookPro/MainWindow.xaml
@@ -1,29 +1,41 @@
-﻿<Window x:Class="BookPro.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BookPro"
-        mc:Ignorable="d"
-        Title="阅读" 
-        SizeToContent="WidthAndHeight"
-        Loaded="Window_Loaded"
-        
-        MouseLeftButtonDown="TitleBar_MouseLeftButtonDown"
-        WindowStyle="None" AllowsTransparency="True" Background="Transparent">
+﻿<Window
+    x:Class="BookPro.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:BookPro"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:tb="http://www.hardcodet.net/taskbar"
+    Title="阅读"
+    AllowsTransparency="True"
+    Background="Transparent"
+    Loaded="Window_Loaded"
+    MouseLeftButtonDown="TitleBar_MouseLeftButtonDown"
+    ShowInTaskbar="False"
+    SizeToContent="WidthAndHeight"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Window.Resources>
-        <!-- 背景颜色资源 -->
+        <!--  背景颜色资源  -->
         <SolidColorBrush x:Key="TitleBackgroundBrush" Color="Red" />
-        <!-- Define a style for the title bar -->
+        <!--  Define a style for the title bar  -->
         <Style x:Key="TitleBarStyle" TargetType="Border">
-            <Setter Property="Background" Value="{StaticResource TitleBackgroundBrush}"/>
-            <!-- Default color -->
-            <Setter Property="Height" Value="20"/>
-            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="Background" Value="{StaticResource TitleBackgroundBrush}" />
+            <!--  Default color  -->
+            <Setter Property="Height" Value="20" />
+            <Setter Property="VerticalAlignment" Value="Top" />
         </Style>
     </Window.Resources>
-    
+
     <Grid Margin="6">
-        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" />
+        <!--  托盘图标  -->
+        <tb:TaskbarIcon
+            IconSource="game64.ico"
+            ToolTipText="计签"
+            TrayLeftMouseDown="TrayIcon_DoubleClick"
+            Visibility="Visible" />
     </Grid>
+
+
 </Window>
